--- a/website/styles.css
+++ b/website/styles.css
@@ -4,7 +4,7 @@ html {
                                         background-color: #777;
                                 }
                                 body {
-                                        width: 80%;
+                                        width: 90%;
                                         margin: 0 auto;
                                         font-family: Arial, Helvetica, sans-serif;
                                         padding: 1em 50px;
@@ -29,11 +29,14 @@ html {
                                         color: green;
                                         font-weight: bold;
                                 }
+								h2:hover {
+										color: pink;
+								}
                                 p {
                                         font-size: 1em;
                                         text-align: justify;
                                         line-height: 1.4;
-                                        width: 60%;
+                                        width: 80%;
                                         margin: 0;
                                         margin-bottom: 1em;
                                 }
@@ -99,3 +102,8 @@ html {
                                                              margin-bottom: .1em;
                                                              text-align: right;
                                                              }
+															 
+								form {
+									background-color: #943;
+									width: 60%;
+								}
