my first js webapp is finished

--- a/dynamite/dynostyles.css
+++ b/dynamite/dynostyles.css
@@ -12,13 +12,13 @@ html {
                                         border-bottom: 10px solid gold;
                                 }
                                 h1 {
-                                        font-family: Georgia, "Times New Roman", Times, serif;
+                                        font-family: Georgia, "Comic Sans", Times, serif;
                                         font-style: italic;
                                         font-weight: bold;
                                         font-size: 2em;
                                         margin: 2em 0 .4em;
                                         padding: 5px 10px;
-                                        background: rgb(44,240,140);
+                                        background: rgb(240,120,40);
                                         color: #dfg;
                                 }
                                 h2 {
