--- a/dynamite/dynastyles.css
+++ b/dynamite/dynastyles.css
@@ -2,6 +2,8 @@ html {
                                         margin: 0;
                                         padding: 0;
                                        background-color: #129;
+									   
+									   
                                 }
                                 body {
                                         width: 90%;
@@ -10,7 +12,9 @@ html {
                                         padding: 1em 50px;
                                         background-color: white;
                                         border-bottom: 10px solid gold;
-										/* background-image: url("_img/sorry_mario.jpg") } */
+										/*background-image: url("_img/sorry_mario.jpg");
+										background-attachment:fixed;*/
+										
                                 }
                                 h1 {
                                         font-family: Georgia, "Comic Sans", Times, serif;
