--- a/dynamite/dynastyles.css
+++ b/dynamite/dynastyles.css
@@ -12,7 +12,7 @@ html {
                                         padding: 1em 50px;
                                         background-color: white;
                                         border-bottom: 10px solid gold;
-										/*background-image: url("_img/sorry_mario.jpg");
+										/*background-image: url("_img/party-background_edited.jpg");
 										background-attachment:fixed;*/
 										
                                 }
